# spacer-on-jupyter

./: .gitignore  Dagstuhl2019.ipynb  ECE750T29_Fall2019.ipynb  FSU_2023.ipynb  LICENSE  README.md  Synasc2019.ipynb  pyproject.toml  requirements.txt
src/spacer_tutorial/: __init__.py  bakery.py  cfa.py  chc.py  dcfa.py  fml.py  proof.py  solve.py  ts.py  vcgen.py  xnet.py
